--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
     "package-ship": "gulp package-solution --ship",
     "clean": "gulp clean",
     "test": "gulp test",
-    "start": "cross-env NODE_NO_HTTP2=1 gulp serve"
+    "start": "cross-env NODE_NO_HTTP2=1 gulp serve",
+    "lint": "tslint -c tslint.json 'src/**/*.{tsx,ts}'",
+    "lint-fix": "tslint -c tslint.json 'src/**/*.{tsx,ts}' --fix",
+    "deploy-build": "run-s lint clean build-ship package-ship"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run lint"
+    }
   },
   "dependencies": {
     "@microsoft/sp-core-library": "~1.1.0",
@@ -26,9 +34,6 @@
     "react-table": "^6.8.6",
     "store2": "^2.7.1"
   },
-  "resolutions": {
-    "@types/react": "0.14.46"
-  },
   "devDependencies": {
     "@microsoft/sp-build-web": "~1.1.0",
     "@microsoft/sp-module-interfaces": "~1.1.0",
@@ -38,16 +43,19 @@
     "@types/es6-promise": "0.0.33",
     "@types/mocha": "2.2.38",
     "@types/prop-types": "^15.5.8",
-    "@types/react": "0.14.46",
-    "@types/react-addons-shallow-compare": "0.14.17",
-    "@types/react-addons-test-utils": "0.14.15",
-    "@types/react-addons-update": "0.14.14",
-    "@types/react-dom": "0.14.18",
+    "@types/react": "0.14.57",
+    "@types/react-addons-shallow-compare": "0.14.22",
+    "@types/react-addons-test-utils": "0.14.23",
+    "@types/react-addons-update": "0.14.20",
+    "@types/react-dom": "0.14.23",
     "@types/react-table": "^6.7.21",
     "@types/webpack-env": "1.13.1",
     "ajv": "~5.2.2",
     "cross-env": "^5.2.0",
     "gulp": "~3.9.1",
+    "husky": "^1.3.1",
+    "npm-run-all": "^4.1.5",
+    "tslint": "4.5.1",
     "typescript": "2.9.2",
     "typescript-tslint-plugin": "^0.3.0"
   }
